# caudal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  render.yaml
apps/accounts/: admin.py  apps.py  models.py  seeding.py  signals.py  tests.py
apps/accounts/migrations/: 0001_initial.py  0002_user_ant_threshold.py  0003_alter_user_ant_threshold.py  0004_user_auto_big_expenses.py
apps/budgets/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
apps/budgets/migrations/: 0001_initial.py
apps/dashboard/: apps.py  tests.py  urls.py  views.py
apps/dashboard/templatetags/: icons.py  money.py
apps/imports/: admin.py  apps.py  forms.py  models.py  parsers.py  services.py  tests.py  urls.py  views.py
apps/imports/migrations/: 0001_initial.py  0002_alter_importbatch_file_categoryrule.py  0003_alter_importbatch_source.py  0004_importbatch_confirmed.py  0005_remove_importbatch_confirmed.py
apps/savings/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
apps/savings/migrations/: 0001_initial.py  (+3 more)
apps/transactions/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/wallets/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
docs/: Caudal Identidad.dc.html  README.md
static/css/: app.css
templates/: 404.html  500.html  base.html  manifest.webmanifest
templates/partials/: brandlogo.html  brandmark.html  tabbar.html
templates/registration/: login.html
(+39 files in other folders)
