[project]
name = "caudal"
version = "0.1.0"
description = "Caudal — gestor de finanzas personales (sueldo, gastos hormiga, ahorro y patrimonio)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.3",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "whitenoise>=6.7",
    "gunicorn>=23.0",
    "django-axes>=8.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
# Generated icon data: long inline-SVG string literals are expected.
"apps/dashboard/templatetags/icons.py" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db"

[tool.uv]
package = false
